flux/apps/immich/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: default
spec:
  selector:
    matchLabels:
      app: immich
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich
    spec:
      nodeSelector:
        network: fast
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v3.2.2
          resources:
            requests:
              cpu: 29m
              memory: 1033Mi
            limits:
              # memory: 1033Mi
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: media-photos
              mountPath: /usr/src/app/upload
      volumes:
        - name: media-photos
          nfs:
            server: datasphere
            path: /Root/Photos
