flux/apps/immich/server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`photos.home`)
      kind: Rule
      services:
        - name: immich
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`photos.arlodev.co.uk`)
      kind: Rule
      services:
        - name: immich
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.arlodev.co.uk`)
      kind: Rule
      services:
        - name: immich
          port: 80
  tls:
    secretName: cert-immich
